# simulate-maxwell-equation

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  simulation.cpp  simulation.h
mysim/: mysim.cpp  mysim.h
simulation/: simulation.cpp  simulation.h
simulation/source_wave/: source_wave.cpp  source_wave.h
simulation_widget/: simulation_widget.cpp  simulation_widget.h
time_widget/: time_widget.cpp  time_widget.h
